# crfp-transfer-learning

./: .gitignore  .gitlab-ci.yml  Dockerfile  HuggingFace_Hyperparameter_Search.ipynb  HuggingFace_ImageClassification.ipynb  HuggingFace_Tapelegen_Preprocess_Dataset.ipynb  HuggingFace_Tapelegen_Train.ipynb  HuggingFace_Tapelegen_Transfer_Evaluate.ipynb  HuggingFace_Tapelegen_Transfer_Learning.ipynb  README.md  auto-dvc-commit.sh  cml-dvc-repro.sh  create_minio_credentials.sh  dvc.yaml  dvccicd.yml  params.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: .gitignore  config
scripts/: install-dev-tools.sh
src/: eval.py  load.py  prepare.py  search.py  train.py
src/helpers/: helpers.py
src/shared/: data.py  learning.py
