[tool.poetry]
name = "src"
version = "0.0.1"
description = ""
authors = ["Anonymous <anonymous@anonymous.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
torch = { version = "2.0.1", source="torch"}
torchaudio = { version = "2.0.2", source="torch"}
torchvision = { version = "0.15.2", source="torch"}
evaluate = "^0.4.0"
transformers = {version = "^4.26.1", extras=["torch"]}
datasets = "^2.12.0"
dvc = "^3.2.3"
dvc-s3 = "^2.22.0"
scikit-learn = "^1.3.0"
ray = {version="^2.2.0,<2.6.3", extras=["all"]}
pydantic = "^1.10.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
coverage = "^6.5.0"
pre-commit = "^2.20.0"
mypy = "^0.991"
jupyter = "^1.0.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
line-length = 79
target_version = ['py310']
exclude = '''
(
  /(
    \ .git
    | .github
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 79
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.coverage]
# https://github.com/nedbat/coveragepy

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "# noqa",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
